--- a/index.html
+++ b/index.html
@@ -12,8 +12,73 @@
     <li><a href="3.html"> JavaScript</a></li>
   </ol>
 
-  <h2>WEB</h2>
-  <p>이거슨 웹에 대한 설명이다 <p>
+  <h2>HTML 이란 무엇인가?</h2>
+  <p><a href="https://www.w3.org/TR/html52/" target="blank" title="이건 몰랐지?">
+   Languguage (HTML)</a> is the standard <a href="https://www.naver.com" target="_blank">Hypertext Markup</a>markup language for <strong>creating <u>web</u> pages</strong> and web applications.</p>
+  <p>durlend aksndrdk</p>
 <img src="coding.JPG" width="400">
+</body>
+
+
+<!doctype html>
+<html>
+<head>
+<title> WEB1 - html</title>
+<meta charset="utf-8">
+
+</head>
+<body>
+<ol>
+  <li>HTML</li>
+  <li> HTML </li>
+  <li> CSS </li>
+  <li> JavaScript</li>
+</ol>
+
+<h1>HTML이란 무엇인가?</h1>
+<p> Hypertext Markup Language (HTML) is the standard markup </p> <p>language for <strong>creating <u>web</u> pages</strong> and web applications.</p>
+<p><br><br><br> durlekeh akr gkaus</p>
+
+<img src="coding.jpg" width="500">
+
+<img src="coding.jpg" width="400">
+
+
+
+<img src="IMG_7684.JPG" width="400">
+<img src="IMG_7685.JPG" width="400">
+<img src="IMG_7685.JPG" width="300">
+<p><div id="disqus_thread"></div>
+<script>
+    /**
+    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+    /*
+    var disqus_config = function () {
+    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    };
+    */
+    (function() { // DON'T EDIT BELOW THIS LINE
+    var d = document, s = d.createElement('script');
+    s.src = 'https://web1-t2itxr9kkv.disqus.com/embed.js';
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
+    })();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript></p>
+<!--Start of Tawk.to Script-->
+<script type="text/javascript">
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+(function(){
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/600eaeb6a9a34e36b97001e9/1esslkubg';
+s1.charset='UTF-8';
+s1.setAttribute('crossorigin','*');
+s0.parentNode.insertBefore(s1,s0);
+})();
+</script>
+<!--End of Tawk.to Script-->
 </body>
 </html>
